--- a/application/views/pages/ticketac.twig
+++ b/application/views/pages/ticketac.twig
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <form method="post" action="{{ base_url('ticketac/gonder') }}" class="form-horizontal">
+                <form method="post" action="{{ base_url('ticket/create') }}" class="form-horizontal">
                     <div class="card-header card-header-text" data-background-color="rose">
                         <i class="material-icons">loyalty</i>
                     </div>
